test/Fail/Issue2408-error.err
Issue2408-error.agda:11.18-27: error: [UnequalSorts]
Set (lsuc (l a)) != Set₁
when checking that the expression Set (l a) has type Set₁
